--- a/src/app/components/persons/personsComponent.html
+++ b/src/app/components/persons/personsComponent.html
@@ -1,8 +1,8 @@
-<div *ng-if="persons.length > 0">
+<div *ngIf="persons.length > 0">
     <input type="text" class="form-control" #box (keyup)=handlePersonsFilterInputKeyEvents(box.value) placeholder="Type to filter... ">
     <br>
 </div>
-<table style="width: 100%; " *ng-if="persons.length> 0">
+<table style="width: 100%; " *ngIf="persons.length> 0">
     <thead>
         <th>&nbsp;&nbsp;&nbsp;</th>
         <th (click)="handleSort('name')" class="sortable">Name</th>
@@ -10,7 +10,7 @@
         <th (click)="handleSort('city')" class="sortable">City</th>
     </thead>
     <tbody>
-        <tr *ng-for="#person of persons | filter:personsFilter | orderBy:personsSort">
+        <tr *ngFor="#person of persons | filter:personsFilter | orderBy:personsSort">
             <td>
                 <button class=" btn btn-xs btn-normal " style="margin: 1px; " (click)="handleShowAddEdit(person) ">Edit</button>
                 <button class="btn btn-xs btn-danger " style="margin: 1px; " (click)="handleDelete(person) ">Delete</button>
@@ -21,7 +21,7 @@
         </tr>
     </tbody>
 </table>
-<span *ng-if="persons.length==0 "><i>No person in directory...</i></span>
+<span *ngIf="persons.length==0 "><i>No person in directory...</i></span>
 <br/>
 <br/>
 <p>
@@ -29,7 +29,4 @@
 </p>
 <br>
 <br>
-<persons-form [(show)]='isAddFormVisible' [width]="400" [height]="260" [edit-person] = "selectedPerson" (on-hide-form)="onAddEditFormHide($event)"></persons-form>
-<!--
-<persons-form2 [(show)]='testShow' (on-hide-form)="onHideForm($event)" [width]="400" [height]="260" [edit-person]="persons[0]"></persons-form2>
--->
+<persons-form [(show)]='isAddFormVisible' [width]="400" [height]="260" [editPerson] = "selectedPerson" (onHideForm)="onAddEditFormHide($event)"></persons-form>
