--- a/src/app/components/personsForm/personsFormComponent.html
+++ b/src/app/components/personsForm/personsFormComponent.html
@@ -1,29 +1,30 @@
-<modal-dialog [(show)]='show' [width]="width" [height]="height" [applyLabel]="'Save'" [cancelLabel]="'Cancel'" (onCloseDialog)="onCloseDialog($event)" [validate]="validateData()">
-            <h3>{{person ? 'Edit Person' : 'Add Person'}}</h3>
-            <br>
-            <form name="addEditForm" style="width: 100%;">
-                <input type="hidden" ngModel="id">
-                <table style="width: 95%;">
-                    <tbody>
-                        <tr>
-                            <th style="width: 100px; text-align: right;">Name:&nbsp;&nbsp;&nbsp;</th>
-                            <td>
-                                <input type="text" [(ngModel)]="person.name" class="form-control" placeholder="Name..." style="margin-bottom: 3px;" required focus-me="isAddFormVisible">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th style="width: 100px; text-align: right;">E-mail:&nbsp;&nbsp;&nbsp;</th>
-                            <th>
-                                <input name="email" type="email" [(ngModel)]="person.email" class="form-control" placeholder="E-mail..." style="margin-bottom: 3px;" required ngPattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
-                            </th>
-                        </tr>
-                        <tr>
-                            <th style="width: 100px; text-align: right;">City:&nbsp;&nbsp;&nbsp;</th>
-                            <td>
-                                <input type="text" [(ngModel)]="person.city" class="form-control" placeholder="City..." style="margin-bottom: 3px;" required>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </form>
+<modal-dialog [(show)]='show' [width]="width" [height]="height" [applyLabel]="'Save'" [cancelLabel]="'Cancel'" (onCloseDialog)="onCloseDialog($event)">
+    <!--[validate]="validateData()" -->
+    <h3>{{person ? 'Edit Person' : 'Add Person'}}</h3>
+    <br>
+    <form name="addEditForm" style="width: 100%;">
+        <input type="hidden" ngModel="id">
+        <table style="width: 95%;">
+            <tbody>
+                <tr>
+                    <th style="width: 100px; text-align: right;">Name:&nbsp;&nbsp;&nbsp;</th>
+                    <td>
+                        <input type="text" [(ngModel)]="person.name" class="form-control" placeholder="Name..." style="margin-bottom: 3px;" required focus-me="isAddFormVisible">
+                    </td>
+                </tr>
+                <tr>
+                    <th style="width: 100px; text-align: right;">E-mail:&nbsp;&nbsp;&nbsp;</th>
+                    <th>
+                        <input name="email" type="email" [(ngModel)]="person.email" class="form-control" placeholder="E-mail..." style="margin-bottom: 3px;" required ngPattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
+                    </th>
+                </tr>
+                <tr>
+                    <th style="width: 100px; text-align: right;">City:&nbsp;&nbsp;&nbsp;</th>
+                    <td>
+                        <input type="text" [(ngModel)]="person.city" class="form-control" placeholder="City..." style="margin-bottom: 3px;" required>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
 </modal-dialog>
